// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DistrictCardContainer should match snap shot with an empty District Card container 1`] = `
<div
  className="district-card-container"
>
   
   
</div>
`;

exports[`DistrictCardContainer should match snapshot with an array of districts with not clicked property  1`] = `
<div
  className="district-card-container"
>
   
  <Component
    clicked={false}
    counter={0}
    key="0"
    location="COLORADO"
    selectCard={[Function]}
    stats={
      Object {
        "2004": 0.24,
        "2005": 0.278,
      }
    }
  />
  <Component
    clicked={false}
    counter={0}
    key="1"
    location="ACADEMY 20"
    selectCard={[Function]}
    stats={
      Object {
        "2004": 0.302,
        "2005": 0.267,
      }
    }
  />
   
</div>
`;

exports[`DistrictCardContainer should match snapshot with districts with clicked property 1`] = `
<div
  className="district-card-container"
>
   
  <Component
    clicked={true}
    counter={1}
    key="0"
    location="COLORADO"
    selectCard={[Function]}
    stats={
      Object {
        "2004": 0.24,
        "2005": 0.278,
      }
    }
  />
  <Component
    clicked={true}
    counter={2}
    key="1"
    location="ACADEMY 20"
    selectCard={[Function]}
    stats={
      Object {
        "2004": 0.302,
        "2005": 0.267,
      }
    }
  />
   
</div>
`;
